--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"></script>
+    <script src="/components/atoms/Input/input.js"></script>
+    <script src="/components/atoms/Button/button.js"></script>
+    <script src="/components/molecules/labeled-input/labeled-input.js" defer></script>
+     <script src="/components/molecules/labeled-image/labeled-image.js" defer></script>
+     <script src="/components/molecules/delete-button/delete-button.js" defer></script>
     <title>Document</title>
-</head>
-<body>
-    hello world
-</body>
+  </head>
+  <body>
+    hello world test
+
+    <div id="btn-container"></div>
+    <div id="input-container"></div>
+    <div id="labeled-input-container"></div>
+    <div id="labeled-image-container"></div>
+    <script>
+      $(function () {
+        $("#btn-container").load("/components/atoms/Button/button.html");
+        $("#input-container").load("/components/atoms/Input/input.html");
+        $("#labeled-input-container").load(
+          "/components/molecules/labeled-input/labeled-input.html",
+        );
+        $("#labeled-image-container").load(
+          "/components/molecules/labeled-image/labeled-image.html",
+        );
+      });
+    </script>
+  </body>
 </html>
