--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"></script>
+
     <script src="/components/atoms/Input/input.js"></script>
     <script src="/components/atoms/Button/button.js"></script>
     <script
@@ -33,41 +34,37 @@
   <body>
     hello world test
 
-    <div id="btn-container"></div>
-    <br />
-    <div id="input-container"></div>
-    <br />
-    <div id="labeled-input-container"></div>
-    <br />
-    <div id="labeled-image-container"></div>
-    <br />
-    <div id="dropdown-container"></div>
-    <br />
-    <div id="dropdown-container2"></div>
+    <div
+      id="add-button"
+      class="btn-container component-container"
+      data-component-url="/components/atoms/Button/button.html"></div>
     <br />
     <br />
-    <div id="number-spinner-container"></div>
-    <script>
-      $(function () {
-        $("#btn-container").load("/components/atoms/Button/button.html");
-        $("#input-container").load("/components/atoms/Input/input.html");
-        $("#labeled-input-container").load(
-          "/components/molecules/labeled-input/labeled-input.html",
-        );
-        $("#labeled-image-container").load(
-          "/components/molecules/labeled-image/labeled-image.html",
-        );
-        $("#dropdown-container").load(
-          "/components/molecules/dropdown/dropdown.html",
-        );
-        $("#dropdown-container2").load(
-          "/components/molecules/dropdown/dropdown.html",
-        );
-        $("#number-spinner-container").load(
-          "/components/molecules/number-spinner/number-spinner.html",
-        );
-      });
-    </script>
+    <div
+      id="customer-name"
+      class="labeled-input-container component-container"
+      data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
+    <br />
+    <div
+      id="invoice-photo"
+      class="labeled-image-container component-container"
+      data-component-url="/components/molecules/labeled-image/labeled-image.html"></div>
+    <br />
+    <div
+      id="placeholder-choice-company"
+      class="dropdown-container component-container"
+      data-component-url="/components/molecules/dropdown/dropdown.html"></div>
+    <br />
+    <div
+      id="placeholder-choice-product-name"
+      class="dropdown-container component-container"
+      data-component-url="/components/molecules/dropdown/dropdown.html"></div>
+    <br />
+    <br />
+    <div class="number-spinner-container"></div>
+
+    <script src="/jQuery/init-component-labels.js"></script>
+    <script src="/jQuery/component-loader.js"></script>
     <script src="/jQuery/component-click-events.js"></script>
   </body>
 </html>
