--- a/public/pages/ocr.html
+++ b/public/pages/ocr.html
@@ -29,43 +29,35 @@
       src="/components/molecules/number-spinner/number-spinner.js"
       defer></script>
 
-    <title>Document</title>
+    <title>업체 정보 조회</title>
   </head>
   <body>
-    hello world test
+    <div
+      class="header-container component-container"
+      data-component-url="/components/organisms/Header/header.html"></div>
+    <br />
+    <!-- title -->
+    <div
+      id="get-invoice-page-access-button"
+      class="get-invoice-title-container component-container"
+      data-component-url="/components/molecules/page-title/page-title.html"></div>
+    <br />
 
     <div
-      id="add-button"
-      class="btn-container component-container"
-      data-component-url="/components/atoms/Button/button.html"></div>
-    <br />
-    <br />
-    <div
-      id="customer-name"
-      class="labeled-input-container component-container"
-      data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
-    <br />
-    <div
       id="invoice-photo"
-      class="labeled-image-container component-container"
+      class="invoice-photo-labeled-image-container component-container"
       data-component-url="/components/molecules/labeled-image/labeled-image.html"></div>
     <br />
+
     <div
-      id="placeholder-choice-company"
-      class="dropdown-container component-container"
-      data-component-url="/components/molecules/dropdown/dropdown.html"></div>
+      id="data-processing-page-access-button"
+      class="data-process-button-container component-container"
+      data-component-url="/components/atoms/Button/button.html"></div>
     <br />
+
     <div
-      id="placeholder-choice-product-name"
-      class="dropdown-container component-container"
-      data-component-url="/components/molecules/dropdown/dropdown.html"></div>
-    <br />
-    <br />
-    <div
-      class="add-product-modal-container component-container"
-      data-component-url="/components/organisms/add-company-modal/add-company-modal.html"></div>
-    <br />
-    <div class="number-spinner-container"></div>
+      class="header-container component-container"
+      data-component-url="/components/organisms/Footer/footer.html"></div>
 
     <script src="/jQuery/init-component-labels.js"></script>
     <script src="/jQuery/component-loader.js"></script>
