메인, 송장 정보 수정

--- a/public/index.html
+++ b/public/index.html
@@ -28,43 +28,31 @@
     <script
       src="/components/molecules/number-spinner/number-spinner.js"
       defer></script>
-
     <title>Document</title>
   </head>
   <body>
-    hello world test
-
-    
-
     <div
-      id="add-button"
+      class="header-container component-container"
+      data-component-url="/components/organisms/header/header.html"></div>
+    <div
+      id="get-invoice-page-access-button"
       class="btn-container component-container"
       data-component-url="/components/atoms/Button/button.html"></div>
-    <br />
-    <br />
     <div
-      id="customer-name"
-      class="labeled-input-container component-container"
-      data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
-    <br />
+      id="chart-page-access-button"
+      class="btn-container component-container"
+      data-component-url="/components/atoms/Button/button.html"></div>
     <div
-      id="invoice-photo"
-      class="labeled-image-container component-container"
-      data-component-url="/components/molecules/labeled-image/labeled-image.html"></div>
-    <br />
+      id="product-page-access-button"
+      class="btn-container component-container"
+      data-component-url="/components/atoms/Button/button.html"></div>
     <div
-      id="placeholder-choice-company"
-      class="dropdown-container component-container"
-      data-component-url="/components/molecules/dropdown/dropdown.html"></div>
-    <br />
+      id="company-page-access-button"
+      class="btn-container component-container"
+      data-component-url="/components/atoms/Button/button.html"></div>
     <div
-      id="placeholder-choice-product-name"
-      class="dropdown-container component-container"
-      data-component-url="/components/molecules/dropdown/dropdown.html"></div>
-    <br />
-    <br />
-    <div class="number-spinner-container"></div>
-
+      class="footer-container component-container"
+      data-component-url="/components/organisms/footer/footer.html"></div>
     <script src="/jQuery/init-component-labels.js"></script>
     <script src="/jQuery/component-loader.js"></script>
     <script src="/jQuery/component-click-events.js"></script>
