--- a/public/pages/company.html
+++ b/public/pages/company.html
@@ -111,5 +111,6 @@
     <script src="/jQuery/init-component-labels.js"></script>
     <script src="/jQuery/component-loader.js"></script>
     <script src="/jQuery/component-click-events.js"></script>
+    <script src="/js/company.js"></script>
   </body>
 </html>
