송장 데이터 조회 중 버튼 누르면 상품 선택칸 추가

--- a/public/pages/save-invoice/save-invoice.html
+++ b/public/pages/save-invoice/save-invoice.html
@@ -45,9 +45,9 @@
       class="invoice-info-title component-container"
       data-component-url="/components/molecules/page-title/page-title.html"></div>
     <div
-      id="customer-name"
-      class="customer-name-labeled-input component-container"
-      data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
+      id="placeholder-choice-company"
+      class="dropdown-container component-container"
+      data-component-url="/components/molecules/dropdown/dropdown.html"></div>
     <div
       id="customer-phone"
       class="customer-phone-labeled-input component-container"
@@ -68,9 +68,10 @@
       id="product-photo"
       class="invoice-photo-labeled-image component-container"
       data-component-url="/components/molecules/labeled-image/labeled-image.html"></div>
-    <div
+    <div class="returned-product-wrapper"> </div>
+    <!-- <div
       class="component-container"
-      data-component-url="/components/organisms/edit-returned-product/edit-returned-product.html"></div>
+      data-component-url="/components/organisms/edit-returned-product/edit-returned-product.html"></div> -->
     <div
       id="add-button"
       class="component-container"
@@ -85,5 +86,6 @@
     <script src="/jQuery/init-component-labels.js"></script>
     <script src="/jQuery/component-loader.js"></script>
     <script src="/jQuery/component-click-events.js"></script>
+    <script src="/pages/save-invoice/save-invoice.js"></script>
   </body>
 </html>
