dev: ocr and company page

--- a/public/pages/company/company.html
+++ b/public/pages/company/company.html
@@ -108,9 +108,13 @@
       class="header-container component-container"
       data-component-url="/components/organisms/Footer/footer.html"></div>
 
+    <div
+      class="modify-company-modal-container component-container"
+      data-component-url="/components/organisms/Modal/add-company-modal/add-company-modal.html"></div>
+
     <script src="/jQuery/init-component-labels.js"></script>
     <script src="/jQuery/component-loader.js"></script>
     <script src="/jQuery/component-click-events.js"></script>
-    <script src="/js/company.js"></script>
+    <script src="/pages/company/company.js"></script>
   </body>
 </html>
