product 페이지의 상품 추가 모달 UI 보강
- 아직 미흡하지만 마무리함.

--- a/public/pages/product/product.html
+++ b/public/pages/product/product.html
@@ -17,6 +17,7 @@
     <link
       href="/pages/product/product.css"
       rel="stylesheet" />
+    <script src="/components/molecules/dropdown/dropdown.js"></script>
 
     <title>업체 정보 조회</title>
   </head>
