product 페이지에 상품 수정 모달 추가
- ui는 완성하였으나 api동작 및 모달 보여주는 로직은 확인 못해봄.

--- a/public/pages/product/product.html
+++ b/public/pages/product/product.html
@@ -36,7 +36,7 @@
       <!-- title -->
       <div
         id="title-products-list"
-        class="company-info-title-container component-container flex-container"
+        class="component-container flex-container"
         data-component-url="/components/molecules/page-title/page-title.html"></div>
       <br />
       <br />
@@ -134,10 +134,11 @@
       class="component-container modal hidden"
       role="dialog"
       aria-hidden="true"
-      data-component-url="/components/organisms/Modal/modify-company-modal/modify-company-modal.html"></div>
+      data-component-url="/components/organisms/Modal/modify-product-modal/modify-product-modal.html"></div>
 
     <script src="/jQuery/init-component-labels.js"></script>
     <script src="/jQuery/component-loader.js"></script>
     <script src="/jQuery/component-click-events.js"></script>
+    <script src="/pages/product/product.js"></script>
   </body>
 </html>
