--- a/public/pages/save-invoice/save-invoice.html
+++ b/public/pages/save-invoice/save-invoice.html
@@ -10,79 +10,94 @@
       integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"></script>
-    <script
-      src="/components/molecules/labeled-input/labeled-input.js"
-      defer></script>
-    <script
-      src="/components/molecules/page-title/page-title.js"
-      defer></script>
-    <script
-      src="/components/molecules/labeled-image/labeled-image.js"
-      defer></script>
-    <script
-      src="/components/molecules/delete-button/delete-button.js"
-      defer></script>
-    <script
-      src="/components/molecules/dropdown/dropdown.js"
-      defer></script>
-    <script
-      src="/components/molecules/number-spinner/number-spinner.js"
-      defer></script>
-    <script
-      src="/components/atoms/Button/button.js"
-      defer></script>
-    <script
-      src="/components/atoms/Input/input.js"
-      defer></script>
-    <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="/css/main.css"
+      rel="stylesheet" />
+    <link
+      href="/pages/save-invoice/save-invoice.css"
+      rel="stylesheet" />
+    <script src="/components/molecules/dropdown/dropdown.js"></script>
+
+    <title>송장 데이터</title>
   </head>
   <body>
-    <div
-      class="header-container component-container"
-      data-component-url="/components/organisms/header/header.html"></div>
-    <div
-      id="title-invoice-info"
-      class="invoice-info-title component-container"
-      data-component-url="/components/molecules/page-title/page-title.html"></div>
-    <div
-      id="placeholder-choice-company"
-      class="dropdown-container component-container"
-      data-component-url="/components/molecules/dropdown/dropdown.html"></div>
-    <div
-      id="customer-phone"
-      class="customer-phone-labeled-input component-container"
-      data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
-    <div
-      id="invoice-number"
-      class="invoice-number-labeled-input component-container"
-      data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
-    <div
-      id="company-name"
-      class="company-name-labeled-input component-container"
-      data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
-    <div
-      id="invoice-photo"
-      class="invoice-photo-labeled-image component-container"
-      data-component-url="/components/molecules/labeled-image/labeled-image.html"></div>
-    <div
-      id="product-photo"
-      class="invoice-photo-labeled-image component-container"
-      data-component-url="/components/molecules/labeled-image/labeled-image.html"></div>
-    <div class="returned-product-wrapper"> </div>
-    <!-- <div
+    <!-- 헤더 -->
+    <header
+      id="header-title"
       class="component-container"
-      data-component-url="/components/organisms/edit-returned-product/edit-returned-product.html"></div> -->
-    <div
-      id="add-button"
-      class="component-container"
-      data-component-url="/components/atoms/Button/button.html"></div>
-    <div
-      id="save-button"
-      class="component-container"
-      data-component-url="/components/atoms/Button/button.html"></div>
+      data-component-url="/components/organisms/header/header.html"></header>
+    <br />
+
+    <main>
+      <br />
+      <br />
+      <!-- 타이틀 -->
+      <div
+        id="title-invoice-info"
+        class="component-container flex-container margin-container"
+        data-component-url="/components/molecules/page-title/page-title.html"></div>
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+
+      <!-- 회사선택 드롭다운 -->
+      <div
+        id="placeholder-choice-company"
+        class="dropdown-container component-container flex-container"
+        data-component-url="/components/molecules/dropdown/dropdown.html"></div>
+
+      <!-- 송장 번호 -->
+      <div
+        id="customer-phone"
+        class="customer-phone-labeled-input component-container flex-container margin-container"
+        data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
+
+      <!-- 고객이름 -->
+      <div
+        id="invoice-number"
+        class="invoice-number-labeled-input component-container flex-container margin-container"
+        data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
+
+      <!-- 고객번호 -->
+      <div
+        id="company-name"
+        class="company-name-labeled-input component-container flex-container margin-container"
+        data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
+
+      <!-- 송장사진 -->
+      <div
+        id="invoice-photo"
+        class="invoice-photo-labeled-image component-container flex-container"
+        data-component-url="/components/molecules/labeled-image/labeled-image.html"></div>
+
+      <!-- 제품사진 -->
+      <div
+        id="product-photo"
+        class="invoice-photo-labeled-image component-container flex-container margin-container"
+        data-component-url="/components/molecules/labeled-image/labeled-image.html"></div>
+
+      <!-- 제품 거시기 -->
+      <div class="returned-product-wrapper margin-container"> </div>
+
+      <!-- 추가버튼 -->
+      <div
+        id="add-button"
+        class="component-container flex-container margin-container"
+        data-component-url="/components/atoms/Button/button.html"></div>
+
+      <!-- 저장버튼 -->
+      <div
+        id="save-button"
+        class="component-container flex-container"
+        data-component-url="/components/atoms/Button/button.html"></div>
+    </main>
     <div
       class="footer-container component-container"
       data-component-url="/components/organisms/footer/footer.html"></div>
+
     <script src="/jQuery/init-component-labels.js"></script>
     <script src="/jQuery/component-loader.js"></script>
     <script src="/jQuery/component-click-events.js"></script>
