--- a/public/pages/save-invoice/save-invoice.html
+++ b/public/pages/save-invoice/save-invoice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0" />
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
       integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
@@ -18,6 +18,7 @@
       href="/pages/save-invoice/save-invoice.css"
       rel="stylesheet" />
     <script src="/components/molecules/dropdown/dropdown.js"></script>
+    <script src="/components/molecules/number-spinner/number-spinner.js"></script>
 
     <title>송장 데이터</title>
   </head>
