--- a/public/pages/product/product.html
+++ b/public/pages/product/product.html
@@ -93,16 +93,12 @@
               </th>
               <th
                 class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase">
-                비고
-              </th>
-              <th
-                class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase">
                 액션
               </th>
             </tr>
           </thead>
           <tbody
-            id="invoiceTableBody"
+            id="productTableBody"
             class="bg-white divide-y divide-gray-200">
             <!-- JS 동적 생성 -->
           </tbody>
