invoice 페이지에 기능 연결 중
- 상품 드롭박스에 아이템 불러오도록 기능 구현

- 송장번호, 고객이름, 고객전화에 데이터 채워지도록 기능 구현

- imaged-label 컴포넌트가 두개 있으면 파일 탐색기가 두번열리며, 사진적용이 제대로 안되고 삭제 버튼이 제대로 동작하지 않는 현상 수정

- 상품 정보 컴포넌트에 삭제 버튼 추가. (버튼의 기능은 아직 미구현)

- 메모란이 placeholder-input 컴포넌트로 되어있어서 textsarea 컴포넌트로 교체함

- 모바일 화면에서 글자크기가 너무 크게나와 적당히 줄임.

--- a/public/pages/save-invoice/save-invoice.html
+++ b/public/pages/save-invoice/save-invoice.html
@@ -50,22 +50,22 @@
         class="dropdown-container component-container flex-container"
         data-component-url="/components/molecules/dropdown/dropdown.html"></div>
 
-      <!-- 송장 번호 -->
+      <!-- 송장번호 -->
       <div
-        id="customer-phone"
-        class="customer-phone-labeled-input component-container flex-container margin-container"
+        id="invoice-number"
+        class="component-container flex-container margin-container"
         data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
 
       <!-- 고객이름 -->
       <div
-        id="invoice-number"
-        class="invoice-number-labeled-input component-container flex-container margin-container"
+        id="customer-name"
+        class="component-container flex-container margin-container"
         data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
 
-      <!-- 고객번호 -->
+      <!-- 고객전화 -->
       <div
-        id="company-name"
-        class="company-name-labeled-input component-container flex-container margin-container"
+        id="customer-phone"
+        class="component-container flex-container margin-container"
         data-component-url="/components/molecules/labeled-input/labeled-input.html"></div>
 
       <!-- 송장사진 -->
