main page and search page done

--- a/public/pages/invoice-chart/invoice-chart.html
+++ b/public/pages/invoice-chart/invoice-chart.html
@@ -74,7 +74,7 @@
             placeholder="홍길동 또는 1234-5678-9012"
             class="mt-1 block w-full px-3 py-2 border rounded-md focus:ring-indigo-500" />
         </div>
-        
+
         <!-- 검색 버튼 -->
         <div>
           <button
@@ -94,7 +94,7 @@
       </div>
 
       <!-- 결과 테이블 -->
-      <div class="overflow-x-auto bg-white rounded-lg shadow ">
+      <div class="overflow-x-auto bg-white rounded-lg shadow">
         <table class="min-w-full divide-y divide-gray-200">
           <thead class="bg-gray-50">
             <tr>
@@ -168,6 +168,6 @@
     <script src="/jQuery/component-loader.js"></script>
     <script src="/jQuery/component-click-events.js"></script>
 
-    <script src="/pages/ocr/ocr.js"></script>
+    <script src="/pages/invoice-chart/invoice-chart.js"></script>
   </body>
 </html>
