상세보기(송장데이터 수정)페이지 구현
- 송장데이터 차트에서 보기를 눌러 상세보기 페이지로 이동 후 정보 수정을 할 수 있게 기능 구현

--- a/public/pages/modify-invoice/modify-invoice.html
+++ b/public/pages/modify-invoice/modify-invoice.html
@@ -15,12 +15,12 @@
       href="/css/main.css"
       rel="stylesheet" />
     <link
-      href="/pages/save-invoice/save-invoice.css"
+      href="/pages/modify-invoice/modify-invoice.css"
       rel="stylesheet" />
     <script src="/components/molecules/dropdown/dropdown.js"></script>
     <script src="/components/molecules/number-spinner/number-spinner.js"></script>
 
-    <title>송장 데이터</title>
+    <title>자세히 보기</title>
   </head>
   <body>
     <!-- 헤더 -->
@@ -99,9 +99,9 @@
       class="footer-container component-container"
       data-component-url="/components/organisms/footer/footer.html"></div>
 
-    <script src="/jQuery/init-component-labels.js"></script>
+    <script src="/pages/modify-invoice/modify-invoice.js"></script>
     <script src="/jQuery/component-loader.js"></script>
+    <script src="/jQuery/init-component-labels.js"></script>
     <script src="/jQuery/component-click-events.js"></script>
-    <script src="/pages/save-invoice/save-invoice.js"></script>
   </body>
 </html>
