show url in company page

--- a/public/pages/company/company.html
+++ b/public/pages/company/company.html
@@ -92,6 +92,10 @@
                 업체 아이디
               </th>
               <th
+              class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase">
+              접속 url
+            </th>
+              <th
                 class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase">
                 비고
               </th>
