--- a/public/pages/index/index.html
+++ b/public/pages/index/index.html
@@ -18,7 +18,9 @@
       href="/pages/index/index.css"
       rel="stylesheet" />
 
-    <title>Document</title>
+    <title>경성글로벌코리아</title>
+    <link rel="icon" href="/images/app-icon.png" type="image/png" />
+
   </head>
   <body>
     <!-- 헤더 -->
