--- a/public/pages/modify-invoice/modify-invoice.html
+++ b/public/pages/modify-invoice/modify-invoice.html
@@ -21,6 +21,8 @@
     <script src="/components/molecules/number-spinner/number-spinner.js"></script>
 
     <title>자세히 보기</title>
+    <link rel="icon" href="/images/app-icon.png" type="image/png" />
+
   </head>
   <body>
     <!-- 헤더 -->
