--- a/public/pages/ocr/ocr.html
+++ b/public/pages/ocr/ocr.html
@@ -22,6 +22,8 @@
       rel="stylesheet" />
 
     <title>업체 정보 조회</title>
+    <link rel="icon" href="/images/app-icon.png" type="image/png" />
+
   </head>
   <body>
     <!-- 헤더 -->
