--- a/public/pages/company/company.html
+++ b/public/pages/company/company.html
@@ -19,6 +19,8 @@
       rel="stylesheet" />
 
     <title>업체 정보 조회</title>
+    <link rel="icon" href="/images/app-icon.png" type="image/png" />
+
   </head>
   <body>
     <!-- 헤더 -->
