--- a/public/pages/invoice-chart/invoice-chart.html
+++ b/public/pages/invoice-chart/invoice-chart.html
@@ -22,6 +22,8 @@
       rel="stylesheet" />
 
     <title>반품 상태 차트 </title>
+    <link rel="icon" href="/images/app-icon.png" type="image/png" />
+
   </head>
   <body>
     <!-- 헤더 -->
