--- a/public/pages/product/product.html
+++ b/public/pages/product/product.html
@@ -20,6 +20,8 @@
     <script src="/components/molecules/dropdown/dropdown.js"></script>
 
     <title>상품 정보 조회</title>
+    <link rel="icon" href="/images/app-icon.png" type="image/png" />
+
   </head>
   <body>
     <!-- 헤더 -->
