송장 상세보기 페이지 보강
- 송장데이터 삭제 기능 추가.

--- a/public/pages/modify-invoice/modify-invoice.html
+++ b/public/pages/modify-invoice/modify-invoice.html
@@ -91,6 +91,14 @@
         class="component-container flex-container margin-container"
         data-component-url="/components/atoms/Button/button.html"></div>
 
+      <br />
+      <br />
+      <!-- 삭제버튼 -->
+      <div
+        id="delete-button"
+        class="delete-invoice-btn component-container flex-container"
+        data-component-url="/components/atoms/Button/delete-button.html"></div>
+      <br />
       <!-- 저장버튼 -->
       <div
         id="save-button"
